--- a/root/pages/contactus.html
+++ b/root/pages/contactus.html
@@ -49,6 +49,16 @@
    </header>
   <main>
   <!--section-->
+  <div class="container-fluid p-0">
+    <div class="site-content">
+      <div class="d-flex justify-content-center">
+        <div class="d-flex flex-column">
+        
+        </div>
+      </div>
+     </div>
+ </div>
+  <!--section2-->
   <div class="container-fluid bg-light">
   <section class="contact">
     <div class="content">
