--- a/root/pages/index.html
+++ b/root/pages/index.html
@@ -55,18 +55,17 @@
      <div class="slide-container">
        <div class="slide-box" style="background-image: url('../images/campaign-creators-qCi_MzVODoU-unsplash.jpg');">
            <div class="slide-box-containt">
-            <h2>Success usually comes to those who are too busy to be looking for it</h2>
+            <h2>Here you can turn your passion into your career.</h2>
            </div>
        </div>
        <div class="slide-box" style="background-image:url('../images/pexels-oleg-magni-2058130.jpg');">
           <div class="slide-box-containt">
             <h2>Welcome to Fifo solutions</h2>
-            <p>Here you can turn your passion into your career.</p>
-         </div>
+           </div>
        </div>
-       <div class="slide-box" style="background-image:url('../images/pexels-christina-morillo-1181304.jpg');">
+       <div class="slide-box" style="background-image:url('../images/bench-accounting-C3V88BOoRoM-unsplash.jpg');">
          <div class="slide-box-containt">
-            <h2>WE will provide you the job by giving training.</h2>
+            <h2>We will provide you the best job.</h2>
          </div>
        </div>
      </div>
@@ -164,7 +163,7 @@
                <div class="d-flex flex-row">
                  <div class="d-flex flex-column">
                      <h3 class="m-2 sec1">Consulting</h3>
-                     <p class="m-2">Fifo solutions Consulting is a full-service IT Consulting Firm specializing in IT project management, systems design and deployment of software and hardware-related.</p>
+                     <p class="m-2">Fifo solutions Consulting is a full-service IT Consulting Firm specializing in IT project management, systems design and deployment of software and hardware.</p>
                    </div>
                 </div>
          </div>
@@ -188,11 +187,11 @@
    </div>
   </div>
   <!--section4-->
-     <div class="section-4">
+     <div class="section-4 bg-dark">
        <div class="container">
          <div class="row">
             <div class="col-md-7">
-              <img src="../images/scott-graham-5fNmWej4tAA-unsplash.jpg" alt="image7" width="500">
+              <img src="../images/brooke-cagle-Uduc5hJX2Ew-unsplash.jpg" alt="image7" width="500">
             </div>
             <div class="col-md-5">
               <h1 class="text-white">Do you want to get a job which fulfills your dream.</h1>
@@ -207,7 +206,7 @@
     <div class="container">
         <div class="section-header">
             <h3>Our Clients</h3>
-            <p>Meet our happy clients</p>
+            <p>Pleasure to work with</p>
         </div>
         <div class="row no-gutters clients-wrap clearfix wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
             <div class="col-lg-3 col-md-4 col-xs-6">
@@ -239,39 +238,50 @@
 </section>
 </main>
    <!--<footer>-->
-   <footer class="footer-distributed">
-       <div class="footer-left ">
-         <h2>Address</h2>
-         <address class="address">
-          <span>D.no. 50-50-39,<br> TPT colony,<br>
-          seethamadara,<br>vizag,AP,<br>
-          India<br>
-          530013</span>
-          </address>
-        </div>
-       <div class="footer-center">
-        <div>
-          <h2>Contact Us</h2>
-           <p class="foot1">Telephone:+971 43206111</p><br>
-           <p class="foot1">WhatsApp: 310-742-5987</p><br>
-           <p class="foot1">Email: people@fifosolutions.com</p>
-           <div class="footer-icons">
-             <a href="#"><i class="fa fa-facebook"></i></a>
-             <a href="#"><i class="fa fa-twitter"></i></a>
-             <a href="#"><i class="fa fa-linkedin"></i></a>
-             <a href="#"><i class="fa fa-github"></i></a>
-            </div>
-        </div>
-      </div>
-     <div class="footer-right">
-       <h2>Fifo Solutions</h2>
-       <p class="footer-company-about"> <!--<span>Fifo Solutions</span>-->
-          Our journey strated in the year 2019 through our parent
-         entity providing management consultancy services. The need
-        for a separate platform for delivering corporate services was inevitable, and Profound Business Services was
-         established.</p>
-      </div>
- </footer>
+ <footer>
+ <div class="main-content">
+   <div class="left box">
+     <h2>Fifo Solutions</h2>
+   <div class="content">
+       <p>Our journey started in the year 2019 through our parent entity providing management consultancy services. The need for a separate platform
+         for delivering corporeta services was inevutable, and profound business services was established.</p>
+     <div class="social">
+       <a href="https://www.google.com/search?q=facebook+login&rlz=1C1CHBF_enIN856IN857&oq=facebook&aqs=chrome.2.69i60j69i57j0i131i433l2j0i433l2j69i60l2.12112j0j4&sourceid=chrome&ie=UTF-8"><span class="fab fa-facebook-f"></span></a>
+       <a href="https://www.google.com/search?q=twitter+login&rlz=1C1CHBF_enIN856IN857&oq=twitter&aqs=chrome.2.69i60j69i57j0i20i263i433j0i67i131i433j69i60l4.4649j0j7&sourceid=chrome&ie=UTF-8"><span class="fab fa-twitter"></span></a>
+       <a href="https://www.google.com/search?q=instagram+login&rlz=1C1CHBF_enIN856IN857&oq=instagram&aqs=chrome.0.35i39j69i57j0i131i433j0i433l2j0i131i433j0i433j5.3209j0j7&sourceid=chrome&ie=UTF-8"><span class="fab fa-instagram"></span></a>
+
+       </div>
+     </div>
+   </div>
+   <div class="center box">
+     <h2>Address</h2>
+     <div class="content">
+       <div class="place">
+         <span class="fas fa-map-marker-alt"></span>
+         <span class="text">D.no 50-50-39,TPT colony<br>Seethamadara,Vizag, AP, India.</span>
+       </div>
+       <div class="phone">
+         <span class="fas fa-phone-alt"></span>
+         <span class="text">310-742-5987</span>
+       </div>
+       <div class="email">
+         <span class="fas fa-envelope"></span>
+         <span class="text">people@fifosolutions.com</span>
+       </div>
+     </div>
+   </div>
+   <div class="right box">
+     <h2>Quick links</h2>
+     <div class="content">
+       <a class="link" href="index.html"> Home</a><br>
+       <a class="link" href="aboutus.html">About Us</a><br>
+       <a class="link" href="training.html">Training</a><br>
+       <a class="link" href="careers.html">Careers</a><br>
+       <a class="link" href="contactus.html">Contact Us</a><br>
+       </div>
+ </div>
+ </div>
+</footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
