--- a/root/index.html
+++ b/root/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Fifo home page</title>
-      <link rel="icon" href="../Favicon/favicon.ico">
+      <link rel="icon" href="Favicon/favicon.ico">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
       <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,7 +17,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-md navbar-dark ">
+      <nav class="navbar navbar-expand-md fixed-top navbar-dark ">
          <a href="index.html" class="navbar-brand ml-3"><img src="images/output-onlinepngtools.png" class="logo" alt="" style="width:130px;height:75px;float:left;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -28,21 +29,21 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="aboutus.html">About Us</a>
+              <a class="nav-link" href="pages/aboutus.html">About Us</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-toggle="dropdown">Services</a>
+              <a class="nav-link dropdown-toggle" href="pages/services.html" id="navbarDropdown" role="button" data-toggle="dropdown">Services</a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                 <a class="dropdown-item" href="staffing.html">IT Staffing & Consulting</a>
+                 <a class="dropdown-item" href="pages/staffing.html">IT Staffing & Consulting</a>
                  <div class="dropdown-divider"></div>
-                 <a class="dropdown-item" href="training.html">Training</a>
+                 <a class="dropdown-item" href="pages/training.html">Training</a>
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="careers.html">Careers</a>
+              <a class="nav-link" href="pages/careers.html">Careers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contactus.html">Contact Us</a>
+              <a class="nav-link" href="pages/contactus.html">Contact Us</a>
             </li>
           </ul>
             <a href="pages/login.html" target="_blank"><i class="fa fa-user emp"></i></a>
@@ -52,20 +53,19 @@
    <main>
     <!--section1-->
      <div class="slide-container">
-       <div class="slide-box" style="background-image: url('images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg');">
+       <div class="slide-box" style="background-image: url('images/campaign-creators-qCi_MzVODoU-unsplash.jpg');">
            <div class="slide-box-containt">
-            <h2>Success usually comes to those who are too busy to be looking for it</h2>
+            <h2>Here you can turn your passion into your career.</h2>
            </div>
        </div>
        <div class="slide-box" style="background-image:url('images/pexels-oleg-magni-2058130.jpg');">
           <div class="slide-box-containt">
             <h2>Welcome to Fifo solutions</h2>
-            <p>Here you can turn your passion into your career.</p>
-         </div>
+           </div>
        </div>
-       <div class="slide-box" style="background-image:url('images/pexels-christina-morillo-1181304.jpg');">
+       <div class="slide-box" style="background-image:url('images/bench-accounting-C3V88BOoRoM-unsplash.jpg');">
          <div class="slide-box-containt">
-            <h2>WE will provide you the job by giving training also.</h2>
+            <h2>We will provide you the best job.</h2>
          </div>
        </div>
      </div>
@@ -76,45 +76,45 @@
     </div>
     <div class="service-box">
       <div class="single-service">
-        <img src="images/pexels-oleg-magni-2058130.jpg" alt="">
+        <img src="images/thomas-lefebvre-gp8BLyaTaA0-unsplash.jpg" alt="">
         <div class="overlay"></div>
-        <a href="jobseekerreg.html">
+        <a href="pages/jobreg.html">
         <div class="service-desc">
           <h3>Job seeker</h3>
           <hr>
-          <p>We are not just a technology company full of people, we’re a people company full of technology.It is people like you who make us what we are today.</p>
+          <p>Here you can register for getting the job through fifo solutions.</p>
         </div></a>
       </div>
       <div class="single-service">
           <img src="images/pexels-rebrand-cities-1367271.jpg" alt="">
           <div class="overlay"></div>
-            <a href="benchsalesreg.html">
+            <a href="pages/benchsalesreg.html">
             <div class="service-desc">
               <h3>Bench sales</h3>
               <hr>
-              <p>We are not just a technology company full of people, we’re a people company full of technology.It is people like you who make us what we are today</p>
+              <p>Here you can register as a bench sales recruiter.Add any number of consultants and their skills.</p>
               </div>
             </a>
         </div>
         <div class="single-service">
             <img src="images/pexels-christina-morillo-1181611.jpg" alt="">
             <div class="overlay"></div>
-            <a href="vendorreg.html">
+            <a href="pages/vendorreg.html">
             <div class="service-desc">
             <h3>Vendors</h3>
               <hr>
-              <p>We are not just a technology company full of people, we’re a people company full of technology.It is people like you who make us what we are today</p>
+              <p>Register here and post any number of unlimited free jobs.</p>
               </div>
             </a>
        </div>
        <div class="single-service">
            <img src="images/pexels-christina-morillo-1181346.jpg" alt="">
             <div class="overlay"></div>
-            <a href="trainingreg.html">
+            <a href="pages/trainingreg.html">
             <div class="service-desc">
              <h3>Training</h3>
               <hr>
-              <p>We are not just a technology company full of people, we’re a people company full of technology.It is people like you who make us what we are today</p>
+              <p>If you are new to technology then join with us to get best training.</p>
              </div>
            </a>
        </div>
@@ -127,10 +127,11 @@
           <div class="col-md-4">
             <div class="d-flex flex-row">
                 <div class="d-flex flex-column">
-                   <h3 class="m-2">24/7 support</h3>
+                   <h3 class="m-6 sec1">24/7 support</h3>
                    <p class="m-2">
-                     It is a long established fact that a reader will be distracted by the readable content
-                     s of a page when looking at its layout. The point of using Lorem
+                    We have an excellent team of experienced agents, each of them specializing in particular types of support.
+                    In all cases we'll work with your team to understand your business requirements,
+                   and get to work immediately.
                    </p>
                 </div>
             </div>
@@ -138,10 +139,10 @@
           <div class="col-md-4">
             <div class="d-flex flex-row">
               <div class="d-flex flex-column">
-                   <h3 class="m-2">Marketing</h3>
+                   <h3 class="m-2 sec1">Marketing</h3>
                    <p class="m-2">
-                     It is a long established fact that a reader will be distracted by the readable content
-                     s of a page when looking at its layout. The point of using Lorem
+                     An effective marketing plan helps a company understand its target market and competition,
+                      the impact and results of marketing decisions, and it provides direction for future initiatives.
                    </p>
                 </div>
             </div>
@@ -149,10 +150,9 @@
           <div class="col-md-4">
             <div class="d-flex flex-row">
                 <div class="d-flex flex-column">
-                   <h3 class="m-2">sales</h3>
+                   <h3 class="m-2 sec1">sales</h3>
                    <p class="m-2">
-                     It is a long established fact that a reader will be distracted by the readable content
-                     s of a page when looking at its layout. The point of using Lorem
+                    Marketing plans can vary depending on the industry, type of products or services, and goals you want to achieve.
                    </p>
                 </div>
             </div>
@@ -162,28 +162,25 @@
          <div class="col-md-4">
                <div class="d-flex flex-row">
                  <div class="d-flex flex-column">
-                     <h3 class="m-2">Major services</h3>
-                     <p class="m-2"> It is a long established fact that a reader will be distracted by the readable content
-                      s of a page when looking at its layout. The point of using Lorem</p>
+                     <h3 class="m-2 sec1">Consulting</h3>
+                     <p class="m-2">Fifo solutions Consulting is a full-service IT Consulting Firm specializing in IT project management, systems design and deployment of software and hardware.</p>
                    </div>
                 </div>
          </div>
          <div class="col-md-4">
            <div class="d-flex flex-row">
                <div class="d-flex flex-column">
-                 <h3 class="m-2">Xyz</h3>
-                 <p class="m-2"> It is a long established fact that a reader will be distracted by the readable content
-                  s of a page when looking at its layout. The point of using Lorem</p>
+                 <h3 class="m-2 sec1">Staffing</h3>
+                 <p class="m-2">Fifo solutions is the best IT staffing services and Solution Company also is a registered business enterprise. We are an assumption company of IT staffing services.</p>
                </div>
             </div>
          </div>
          <div class="col-md-4">
            <div class="d-flex flex-row">
            <div class="d-flex flex-column">
-                 <h3 class="m-2">our clients</h3>
-                 <p class="m-2"> It is a long established fact that a reader will be distracted by the readable content
-                  s of a page when looking at its layout. The point of using Lorem</p>
-               </div>
+                 <h3 class="m-2 sec1">App development</h3>
+                 <p class="m-2">Fifo solutions helps in shaping companies by integrating strategy, creativity, analytics, and technical expertise. In coordination with our clients, we turn ideas into products.</p>
+              </div>
             </div>
          </div>
       </div>
@@ -194,13 +191,12 @@
        <div class="container">
          <div class="row">
             <div class="col-md-7">
-              <img src="images/scott-graham-5fNmWej4tAA-unsplash.jpg" alt="image7" width="500">
+              <img src="images/brooke-cagle-Uduc5hJX2Ew-unsplash.jpg" alt="image7" width="500">
             </div>
             <div class="col-md-5">
               <h1 class="text-white">Do you want to get a job which fulfills your dream.</h1>
-              <a href="jobseekerreg.html">Join us</a>
-              <p class="para-1"> It is a long established fact that a reader will be distracted by the readable content
-               s of a page when looking at its layout. The point of using Lorem</p>
+              <a href="pages/jobreg.html">Join us</a>
+              <p class="para-1"> A job is an internal document that clearly states the essential job requirements, job duties, job responsibilities, and skills required to perform a specific role.</p>
             </div>
          </div>
         </div>
@@ -209,8 +205,8 @@
     <section id="clients" class="section-bg">
     <div class="container">
         <div class="section-header">
-            <h3>Our CLients</h3>
-            <p>Meet our happy clients</p>
+            <h3>Our Clients</h3>
+            <p>Pleasure to work with</p>
         </div>
         <div class="row no-gutters clients-wrap clearfix wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
             <div class="col-lg-3 col-md-4 col-xs-6">
@@ -242,39 +238,49 @@
 </section>
 </main>
    <!--<footer>-->
-   <footer class="footer-distributed">
-       <div class="footer-left ">
-         <h2>Address</h2>
-         <address class="address">
-          <span>21 Revolution Street<br>
-          vizag, Andhra pradesh,<br>
-          India<br>
-          +1 667 123456<br>
-           P O Box: 117537<br></span>
-          </address>
-        </div>
-       <div class="footer-center">
-        <div>
-          <h2>Contact Us</h2>
-           <p class="foot1">Telephone:+971 43206111</p><br>
-           <p class="foot1">WhatsApp: +971 552096715</p><br>
-           <p class="foot1">Email: info@fifosolutions.com</p>
-           <div class="footer-icons">
-             <a href="#"><i class="fa fa-facebook"></i></a>
-             <a href="#"><i class="fa fa-twitter"></i></a>
-             <a href="#"><i class="fa fa-linkedin"></i></a>
-             <a href="#"><i class="fa fa-github"></i></a>
-            </div>
-        </div>
-      </div>
-     <div class="footer-right">
-       <p class="footer-company-about"> <span>Fifo Solutions</span>
-          Our journey strated in the year 2019 through our parent
-         entity providing management consultancy services. The need
-        for a separate platform for delivering corporate services was inevitable, and Profound Business Services LLC was
-         established.</p>
-      </div>
- </footer>
+ <footer>
+ <div class="main-content">
+   <div class="left box">
+     <h2>Fifo Solutions</h2>
+   <div class="content">
+       <p>Our journey started in the year 2019 through our parent entity providing management consultancy services. The need for a separate platform
+         for delivering corporeta services was inevutable, and profound business services was established.</p>
+     <div class="social">
+         <a href="https://www.google.com/search?q=facebook+login&rlz=1C1CHBF_enIN856IN857&oq=facebook&aqs=chrome.2.69i60j69i57j0i131i433l2j0i433l2j69i60l2.12112j0j4&sourceid=chrome&ie=UTF-8"><span class="fab fa-facebook-f"></span></a>
+         <a href="https://www.google.com/search?q=twitter+login&rlz=1C1CHBF_enIN856IN857&oq=twitter&aqs=chrome.2.69i60j69i57j0i20i263i433j0i67i131i433j69i60l4.4649j0j7&sourceid=chrome&ie=UTF-8"><span class="fab fa-twitter"></span></a>
+         <a href="https://www.google.com/search?q=instagram+login&rlz=1C1CHBF_enIN856IN857&oq=instagram&aqs=chrome.0.35i39j69i57j0i131i433j0i433l2j0i131i433j0i433j5.3209j0j7&sourceid=chrome&ie=UTF-8"><span class="fab fa-instagram"></span></a>
+       </div>
+     </div>
+   </div>
+   <div class="center box">
+     <h2>Address</h2>
+     <div class="content">
+       <div class="place">
+         <span class="fas fa-map-marker-alt"></span>
+         <span class="text">D.no 50-50-39,TPT colony<br>Seethamadara,Vizag, AP, India.</span>
+       </div>
+       <div class="phone">
+         <span class="fas fa-phone-alt"></span>
+         <span class="text">310-742-5987</span>
+       </div>
+       <div class="email">
+         <span class="fas fa-envelope"></span>
+         <span class="text">people@fifosolutions.com</span>
+       </div>
+     </div>
+   </div>
+   <div class="right box">
+     <h2>Quick links</h2>
+     <div class="content">
+       <a class="link" href="index.html"> Home</a><br>
+       <a class="link" href="pages/aboutus.html">About Us</a><br>
+       <a class="link" href="pages/training.html">Training</a><br>
+       <a class="link" href="pages/careers.html">Careers</a><br>
+       <a class="link" href="pages/contactus.html">Contact Us</a><br>
+       </div>
+ </div>
+ </div>
+</footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
