--- a/root/pages/benchsalesreg.html
+++ b/root/pages/benchsalesreg.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/benchsalesreg.css">
+      <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
   <body>
     <header>
@@ -85,38 +86,50 @@
 </main>
 
 <!--footer-->
-    <footer class="footer-distributed">
-        <div class="footer-left ">
-          <h2>Address</h2>
-          <address class="address">
-           <span>21 Revolution Street<br>
-           vizag, Andhra pradesh,<br>
-           India<br>
-           +1 667 123456<br>
-            P O Box: 117537<br></span>
-           </address>
-         </div>
-        <div class="footer-center">
-         <div>
-           <h2>Contact Us</h2>
-            <p class="foot1">Telephone:+971 43206111</p><br>
-            <p class="foot1">WhatsApp: +971 552096715</p><br>
-            <p class="foot1">Email: info@fifosolutions.com</p>
-            <div class="footer-icons">
-              <a href="#"><i class="fa fa-facebook"></i></a>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-              <a href="#"><i class="fa fa-linkedin"></i></a>
-              <a href="#"><i class="fa fa-github"></i></a>
-             </div>
-         </div>
-       </div>
-      <div class="footer-right">
-        <p class="footer-company-about"> <span>Fifo Solutions</span>
-           Our journey strated in the year 2019 through our parent
-          entity providing management consultancy services. The need
-         for a separate platform for delivering corporate services was inevitable, and Profound Business Services LLC was
-          established.</p>
-       </div>
+
+<footer>
+<div class="main-content">
+  <div class="left box">
+    <h2>Fifo Solutions</h2>
+  <div class="content">
+      <p>Our journey started in the year 2019 through our parent entity providing management consultancy services. The need for a separate platform
+        for delivering corporeta services was inevutable, and profound business services was established.</p>
+    <div class="social">
+      <a href="https://www.google.com/search?q=facebook+login&rlz=1C1CHBF_enIN856IN857&oq=facebook&aqs=chrome.2.69i60j69i57j0i131i433l2j0i433l2j69i60l2.12112j0j4&sourceid=chrome&ie=UTF-8"><span class="fab fa-facebook-f"></span></a>
+      <a href="https://www.google.com/search?q=twitter+login&rlz=1C1CHBF_enIN856IN857&oq=twitter&aqs=chrome.2.69i60j69i57j0i20i263i433j0i67i131i433j69i60l4.4649j0j7&sourceid=chrome&ie=UTF-8"><span class="fab fa-twitter"></span></a>
+      <a href="https://www.google.com/search?q=instagram+login&rlz=1C1CHBF_enIN856IN857&oq=instagram&aqs=chrome.0.35i39j69i57j0i131i433j0i433l2j0i131i433j0i433j5.3209j0j7&sourceid=chrome&ie=UTF-8"><span class="fab fa-instagram"></span></a>
+ 
+      </div>
+    </div>
+  </div>
+  <div class="center box">
+    <h2>Address</h2>
+    <div class="content">
+      <div class="place">
+        <span class="fas fa-map-marker-alt"></span>
+        <span class="text">D.no 50-50-39,TPT colony<br>Seethamadara,Vizag, AP, India.</span>
+      </div>
+      <div class="phone">
+        <span class="fas fa-phone-alt"></span>
+        <span class="text">310-742-5987</span>
+      </div>
+      <div class="email">
+        <span class="fas fa-envelope"></span>
+        <span class="text">people@fifosolutions.com</span>
+      </div>
+    </div>
+  </div>
+  <div class="right box">
+    <h2>Quick links</h2>
+    <div class="content">
+      <a class="link" href="index.html"> Home</a><br>
+      <a class="link" href="aboutus.html">About Us</a><br>
+      <a class="link" href="training.html">Training</a><br>
+      <a class="link" href="careers.html">Careers</a><br>
+      <a class="link" href="contactus.html">Contact Us</a><br>
+      </div>
+</div>
+</div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
