--- a/root/pages/jobreg.html
+++ b/root/pages/jobreg.html
@@ -23,7 +23,7 @@
          <div class="collapse navbar-collapse"></div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
@@ -144,7 +144,7 @@
       <a href="https://www.google.com/search?q=facebook+login&rlz=1C1CHBF_enIN856IN857&oq=facebook&aqs=chrome.2.69i60j69i57j0i131i433l2j0i433l2j69i60l2.12112j0j4&sourceid=chrome&ie=UTF-8"><span class="fab fa-facebook-f"></span></a>
       <a href="https://www.google.com/search?q=twitter+login&rlz=1C1CHBF_enIN856IN857&oq=twitter&aqs=chrome.2.69i60j69i57j0i20i263i433j0i67i131i433j69i60l4.4649j0j7&sourceid=chrome&ie=UTF-8"><span class="fab fa-twitter"></span></a>
       <a href="https://www.google.com/search?q=instagram+login&rlz=1C1CHBF_enIN856IN857&oq=instagram&aqs=chrome.0.35i39j69i57j0i131i433j0i433l2j0i131i433j0i433j5.3209j0j7&sourceid=chrome&ie=UTF-8"><span class="fab fa-instagram"></span></a>
- 
+
       </div>
     </div>
   </div>
